# pptrans

./: .gitignore  PLAN.md  pyproject.toml  translate_pptx.py
.github/workflows/: build_wheel.yml  deploy_pages.yml  test.yml
src/js/: __init__.py
src/pptrans/: __init__.py  __main__.py  cache.py  page_range.py
tests/: create_sample_pptx.py  sample.en.pptx  test___init__.py  test___main__.py  test_cache.py  test_page_range.py
webapp/: index.html  index.py
